# gdc-uploader

./: .gitignore  .gitignore.agent  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  agent-prompt.md  gdc-manifest.json  gdc-uploader-v2-packed.cwl  pyproject.toml  requirements.txt  setup.py  test-complete-workflow-job.yml  upload2gdc.sln
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
apps/: gdc.Dockerfile  gdc_direct-upload.cwl  gdc_metadata-generate.cwl  gdc_upload.cwl  gdc_upload.sh  gdc_yaml2json-simple.cwl  gdc_yaml2json.cwl
artifacts/cwl/: 01_init_project_structure.cwl  gdc_upload.cwl  gdc_yaml2json.cwl
artifacts/docker/: 02_emit_all_artifacts.Dockerfile  gdc_upload.Dockerfile  gdc_yaml2json.Dockerfile
artifacts/notebooks/: 01_init_project_structure.qmd  gdc_upload.qmd  gdc_yaml2json.qmd
cwl/: README.md  gdc-uploader.cwl  gdc.Dockerfile  gdc_direct-upload.cwl  gdc_direct-upload.sh  gdc_filter_json.py  gdc_metadata-generate.cwl  gdc_split_json.cwl  gdc_upload.sh  gdc_upload_single.sh  gdc_upload_single_wrapper.sh  gdc_uploader.cwl  gdc_yaml2json-simple.cwl  gdc_yaml2json.cwl  gdc_yaml2json.py  metadata-generator.cwl  test-job-minimal.yml  test-job.yml  test_elastic_storage.cwl
docs/: API.md  ARCHITECTURE.md  C6ID_LARGE_ANALYSIS.md  C6ID_LARGE_ELASTIC_STORAGE.md  C6I_COST_OPTIMIZATION.md  CLAUDE.md  ELASTIC_STORAGE_OPTIMIZATION.md  EXAMPLES.md  FILENAME-REQUIREMENTS.md  GCP_COST_ANALYSIS.md  M6I_SPOT_ANALYSIS.md  METADATA_FORMAT.md  MIGRATION_NOTES.md  PARALLEL_UPLOAD_GUIDE.md  PYTHON_REFACTOR.md  README.md  SEVEN_BRIDGES_COST_OPTIMIZATION.md  SEVEN_BRIDGES_PROGRESS.md  SPOT_INSTANCE_COST_ANALYSIS.md  SPOT_INSTANCE_USAGE.md  SPOT_INTERRUPTION_ANALYSIS.md  TESTING_PROGRESS.md  TROUBLESHOOTING.md  cwl-commands.md  usage-diagram.md
docs/technical/: architecture.md
docs/testing/: test-report.md
docs/usage/: cwl-commands.md
examples/: api_usage.py
gdcupload-master/: .dockerignore  Dockerfile  README.md
gdcupload-master/cwl/: gdc-uploader.cwl  metadata-generator.cwl
legacy/cwl/: gdc-uploader-packed.cwl  gdc_complete_workflow.cwl  gdc_direct-upload.cwl  gdc_filter_json.cwl  (+6 more)
notebooks/: quick_start.ipynb
plans/: refactor-to-prompt-structure.plan.md
prompts/: README.md  coordination-guide.md  gdc_upload.md  gdc_yaml2json.md  setup-multi-agent-worktrees.sh
specs/: agent-1-progress.md  agent-2-progress.md  agent-4-progress.md  agent-6-progress.md  improve01.md  migration_examples.py  worktree-direct-merge-workflow.md
tests/: TEST-RESULTS.md  run-cwl-test.sh  run_tests.py  test-cwl.sh  test-job.yml  test-manifest.json  test-manifest.yaml  test-sample.txt  test-sb-style.sh  test-token.txt  test-workflow-job-bam.yml  upload_output.json
(+87 files in other folders)
